chore: prepare v2.1.2 release

--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
               <a href="https://prabinb.com.np/?i=1" target="_blank" class="text-decoration-none">
                 Visit My Portfolio <i class="fas fa-external-link-alt"></i>
               </a>
-              <p class="version-label">Version V.2:1:1</p>
+              <p class="version-label">Version V2.1.2</p>
             </div>
           </div>
         </div>
